hphp/hack/test/typecheck/suspend_operator_err16.php
<?hh // strict

class A {
  const type C = (function(): int);
}

class B extends A {
  const type C = (coroutine function(): int);
}
